[package]
name = "ddns-service"
version = "0.1.0"
edition = "2021"
authors = ["Ondrejó András <ondrej.a@gmail.com>"]
description = "Cloudflare DDNS updater service"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }

serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
serde_yaml = "0.8.24"
reqwest = "0.11.10"
anyhow = "1.0.57"
cloudflare = "0.9.1"
env_logger = "0.9.0"
log = "0.4.17"
directories = "4.0.1"